scss/app.scss
@import "nhsuk";

$grey: #E8EDEE;
$border-grey: #BAC4C8;

body {
  background-color:$grey;
  header {
    background-color: $white;
  }
  .page-section {
    padding: 32px 0 48px 0;
    h1 {
      font-size: 30px;
    }
    h2 {
      font-size: 24px;
    }
    p, ul {
      font-size: 18px;
      margin-top: 16px;
    }

    @include media(tablet) {
      h1 {
        font-size: 40px;
      }
      h2 {
        font-size: 28px;
      }
      p, ul {
        font-size: 20px;
      }
    }
  }
  p {
    &.local-header--step {
      display: block;
      font-size: 18px;
      font-weight: 400;
      margin-top: 0;
    }
  }
}

.sr-only,
.hidden {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  border: 0;
}

.notification-banner {
  &--question,
  > * {
    max-width:960px;
    margin: 0 16px;
    padding: 8px 0;
    font-size: 16px;
    line-height: 24px;
    @include media(tablet) {
      margin: 0 16px;
    }
    @include media(desktop) {
      margin: 0 32px;
    }
    @media (min-width: 1024px){
      margin: 0 auto;
    }
  }
  &__js-hidden {
    display:none;
  }
  &__hiviz {
    background-color: $yellow-50;
  }
}

/*
   Form elements
*/
form {
  .form-control {
    -webkit-box-sizing: border-box;
    -moz-box-sizing: border-box;
    box-sizing: border-box;
    font-size: 24px;
    font-weight: 400;
    line-height: 32px;
    text-transform: none;
    width: 100%;
    padding: 4px;
    background-color: $white !important;
    border: 2px solid #000;
    margin: 20px 0;
    @include media(tablet) {
      font-size: 24px;
      line-height: 32px;
      width: 50%;
    }
    @include media(desktop) {
      font-size: 24px;
      line-height: 32px;
    }
  }
  .form-label-bold {
    font-size: 20px;
    font-weight: 400;
    line-height: 32px;
    text-transform: none;
  }
  .form-group {
    -webkit-box-sizing: border-box;
    -moz-box-sizing: border-box;
    box-sizing: border-box;
    width: 100%;
    .c-search-menu {
      position: relative !important; // sass-lint:disable-line no-important
      top: -20px !important; // sass-lint:disable-line no-important
    @include mq($until: tablet) {
        left: 0 !important;
        margin: -20px 0 20px 0;
        top: 0 !important; // sass-lint:disable-line no-important
      }
    }
  }

  label {
    span {
      display: block;
      margin-top: 25px;
    }
  }
}

/*
  Links
*/
.link-back {
  border-bottom: 1px solid #0b0c0c;
  color: #000000;
  display: inline-block;
  font-size: 16px;
  font-weight: 400;
  line-height: 1.25;
  margin-top:16px;
  margin-bottom: 32px;
  padding-left: 14px;
  position: relative;
  text-decoration: none;
  text-transform: none;
  @include media(desktop) {
    margin-top:0;
  }
  &::before {
    border-bottom: 5px solid transparent;
    border-right: 6px solid #0b0c0c;
    border-top: 5px solid transparent;
    content: "";
    display: block;
    height: 0;
    left: 0;
    margin-top: -6px;
    position: absolute;
    top: 50%;
    width: 0;
  }
  &:link,
  &:visited,
  &:hover,
  &:active {
    color: #000000;
  }
}

/*
   Error styling
*/
.error {
  margin: 0 15px 20px 0;
  border-left: 4px solid $red;
  padding-left: 10px;
  > .form-control {
    border: 4px solid $red;
  }
  @include media(tablet) {
    border-left: 5px solid $red;
    padding-left: 15px;
  }
  * + * {
    margin-top: 0;
  }
  .page-section p {
    margin-bottom: 16px;
  }
  .multiple-choice:not(:first-child) {
    margin-top: 32px;
  }
  .multiple-choice--description {
    padding-top: 32px;
    &:first-of-type {
      margin-top: 0;
    }
  }
}

.error-summary {
  border: 4px solid #338ed1;
  margin-bottom: 45px;
  padding: 15px 10px;
  background-color: $white;
  @include media(tablet) {
    border: 5px solid #338ed1;
    margin: 45px 0;
    padding: 20px 15px 15px;
  }
  &:focus {
    outline: 3px solid #ffbf47;
  }
  &-heading {
    margin-top: 0;
  }
  &-list {
    color: #000;
    list-style-type:none;
    margin-top:0;
    padding:0;
    li {
      @include media(tablet) {
        margin-bottom: 5px;
      }
    }
    a {
      color: $red;
      font-weight: bold;
      text-decoration: underline;
    }
  }
  p {
    margin-bottom: 10px;
  }
  h2 {
    padding:0;
  }
}

// Results
.highlight {
  background-color: $yellow-50;
}

.results__item {
  border-top: 2px solid $border-grey;
}

.results__name {
  margin: 0;
}

